Almost working file

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -26,12 +26,12 @@
             <p>Answer a few basic questions.</p>
             <p>Then find the friend with the greatest compatibility!</p>
             <br>
-            <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-list-alt"
-                    aria-hidden="true"></span> Go to Survey</button>
+            <a href="/survey"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-list-alt"
+                    aria-hidden="true"></span> Go to Survey</button></a>
         </div>
 
         <footer>
-            <a href="#">API Friends List</a> | <a href="#">GitHub Repo</a>
+            <a href="/api/friends">API Friends List</a> | <a href="https://github.com/pounat/friendfinder">GitHub Repo</a>
         </footer>
 
         <!-- container div -->
