--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -23,11 +23,11 @@
         <hr>
         <h2>About You</h2>
         <form>
-            <div class="form-group">
+            <div class="form-group" id="name">
                 <label for="userName">Name</label>
                 <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
-            <div class="form-group">
+            <div class="form-group" id="photo">
                 <label for="exampleInputPassword1">Link to Photo Image</label>
                 <input type="text" class="form-control" id="exampleInputPassword1">
             </div>
@@ -224,16 +224,61 @@
 
             <!-- submit button -->
             <br>
-            <button type="button" class="btn btn-primary btn-lg btn-block"><span
+            <button type="button" class="btn btn-primary btn-lg btn-block" id="submitQuiz"><span
                     class="glyphicon glyphicon-ok-sign"></span> Submit</button>
             <!-- end of form -->
         </form>
         <br>
         <footer>
-            <a href="#">API Friends List</a> | <a href="#">GitHub Repo</a>
+            <a href="/api/friends">API Friends List</a> | <a href="https://github.com/pounat/friendfinder">GitHub Repo</a>
         </footer>
         <br>
     </div>
 </body>
+
+<script type="text/javascript">
+$("#submitQuiz").on("click", function(event) {
+		event.preventDefault();
+
+		// Form validation
+		var valid = true;
+
+		if($("#name").val() === "" || $("#photo").val() === "") {
+			valid = false;
+		} else if($("#Q1").val() === "empty" || $("#Q2").val() === "empty" || $("#question3").val() === "empty" || $("#Q4").val() === "empty" || $("#Q5").val() === "empty" || $("#Q6").val() === "empty" || $("#Q7").val() === "empty" || $("#Q8").val() === "empty" || $("#Q9").val() === "empty" || $("#Q10").val() === "empty") {
+			valid = false;
+		}
+
+		if(valid === true) {
+			var newUser = {
+				name: $("#name").val().trim(),
+				photo: $("#photo").val().trim(),
+				scores: [
+					$("#Q1").val(),
+					$("#Q2").val(),
+					$("#Q3").val(),
+					$("#Q4").val(),
+					$("#Q5").val(),
+					$("#Q6").val(),
+					$("#Q7").val(),
+					$("#Q8").val(),
+					$("#Q9").val(),
+					$("#Q10").val()
+				]
+			};
+
+			var currentURL = window.location.origin;
+
+			// Ajax call for receiving response after POST req
+			$.post(currentURL + "/api/friends", newUser, function(data) {
+				$("#bestFriend").text(data.name);
+				$("#bestFriendPhoto").attr("src", data.photo);
+				$("#bestFriendModal").modal("toggle");
+			});
+		} else {
+			// If a required field is missing, show alert
+			alert("Survey is incomplete!");
+		}
+	});</script>
 
 </html>
